; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMHibernateIntervalSet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMHibernateIntervalSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HIB3P3_BASE = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_TIMER_READ = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_TIMER_MSW = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_TIMER_LSW = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_WAKE_LSW_CONF = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_WAKE_MSW_CONF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PRCMHibernateIntervalSet(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* @HIB3P3_BASE, align 8
  %5 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_TIMER_READ, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @MAP_PRCMHIBRegWrite(i64 %6, i64 1)
  %8 = load i64, i64* @HIB3P3_BASE, align 8
  %9 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_TIMER_MSW, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i64 @MAP_PRCMHIBRegRead(i64 %10)
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* %3, align 8
  %13 = shl i64 %12, 32
  store i64 %13, i64* %3, align 8
  %14 = load i64, i64* @HIB3P3_BASE, align 8
  %15 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_TIMER_LSW, align 8
  %16 = add nsw i64 %14, %15
  %17 = call i64 @MAP_PRCMHIBRegRead(i64 %16)
  %18 = load i64, i64* %3, align 8
  %19 = or i64 %18, %17
  store i64 %19, i64* %3, align 8
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* %2, align 8
  %22 = add i64 %20, %21
  store i64 %22, i64* %3, align 8
  %23 = load i64, i64* @HIB3P3_BASE, align 8
  %24 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_WAKE_LSW_CONF, align 8
  %25 = add nsw i64 %23, %24
  %26 = load i64, i64* %3, align 8
  %27 = call i32 @MAP_PRCMHIBRegWrite(i64 %25, i64 %26)
  %28 = load i64, i64* @HIB3P3_BASE, align 8
  %29 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_WAKE_MSW_CONF, align 8
  %30 = add nsw i64 %28, %29
  %31 = load i64, i64* %3, align 8
  %32 = lshr i64 %31, 32
  %33 = call i32 @MAP_PRCMHIBRegWrite(i64 %30, i64 %32)
  ret void
}

declare dso_local i32 @MAP_PRCMHIBRegWrite(i64, i64) #1

declare dso_local i64 @MAP_PRCMHIBRegRead(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
